<?xml version="1.0"?>
<package>
  <name>stage_utils</name>
  <version>0.0.1</version>
  <description>The path_follower package</description>

  <maintainer email="dantard@unizar.es">Danilo Tardioli</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>costmap_2d</build_depend>

  <run_depend>nav_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>costmap_2d</run_depend>

  <export>
  </export>
</package>
